--- a/my-money-app/backend/package.json
+++ b/my-money-app/backend/package.json
@@ -2,7 +2,7 @@
   "name": "my-money-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/loader.js",
   "scripts": {
     "dev": "nodemon",
     "production": "pm2 start src/loading.js --name my-money-backend",
