--- a/my-money-app/backend/package.json
+++ b/my-money-app/backend/package.json
@@ -5,8 +5,7 @@
   "main": "src/loader.js",
   "scripts": {
     "dev": "nodemon",
-    "production": "pm2 start src/loading.js --name my-money-backend",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "production": "pm2 start src/loading.js --name my-money-backend"
   },
   "keywords": [],
   "author": "",
