--- a/cadastro_usuario/frontend/package.json
+++ b/cadastro_usuario/frontend/package.json
@@ -6,8 +6,13 @@
     "react-scripts": "2.1.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
